libs/@local/hashql/syntax-jexpr/src/parser/object/snapshots/hashql_syntax_jexpr__parser__object__r#struct__tests__parse_deeply_nested_structs.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/object/struct.rs
description: Parses deeply nested struct structures
expression: "{\"#struct\": {\n            \"level1\": {\"#struct\": {\n                \"level2\": {\"#struct\": {\n                    \"level3\": {\"#struct\": {\n                        \"value\": {\"#literal\": \"nested\"}\n                    }}\n                }}\n            }}\n        }}"
---
Expr#4294967040@21
  ExprKind (Struct)
    StructExpr#4294967040@20
      StructEntry#4294967040@19 (key: level1)
        Expr#4294967040@18
          ExprKind (Struct)
            StructExpr#4294967040@17
              StructEntry#4294967040@16 (key: level2)
                Expr#4294967040@15
                  ExprKind (Struct)
                    StructExpr#4294967040@14
                      StructEntry#4294967040@13 (key: level3)
                        Expr#4294967040@12
                          ExprKind (Struct)
                            StructExpr#4294967040@11
                              StructEntry#4294967040@10 (key: value)
                                Expr#4294967040@9
                                  ExprKind (Literal)
                                    LiteralExpr#4294967040@8
                                      LiteralKind (String)
                                        StringLiteral#4294967040@8 (nested)
