libs/@local/hashql/syntax-jexpr/src/parser/object/snapshots/hashql_syntax_jexpr__parser__object__r#struct__tests__parse_empty_struct.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/object/struct.rs
description: Parses an empty struct
expression: "{\"#struct\": {}}"
---
Expr#4294967040@1
  ExprKind (Struct)
    StructExpr#4294967040@0
