libs/@local/hashql/syntax-jexpr/src/parser/object/snapshots/hashql_syntax_jexpr__parser__object__r#struct__tests__parse_struct_incomplete.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/object/struct.rs
description: Parses with a sudden EOF
expression: "{\"#struct\": "
---
[31m[lexer::lexer::unexpected-eof] Error:[0m Lexer
   ╭─[ <unknown>:1:13 ]
   │
 1 │ {"#struct":
   │             │ 
   │             ╰─ Unexpected end of file, expected `{`
   │ 
   │ Help: The file ended where an opening bracket was expected. Complete the expression structure.
───╯
