libs/@local/hashql/syntax-jexpr/src/parser/object/snapshots/hashql_syntax_jexpr__parser__object__r#struct__tests__parse_struct_with_function_calls.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/object/struct.rs
description: Parses a struct with function call values
expression: "{\"#struct\": {\n            \"sum\": [\"add\", {\"#literal\": 1}, {\"#literal\": 2}],\n            \"message\": [\"format\", {\"#literal\": \"Hello, {0}!\"}, {\"#literal\": \"World\"}]\n        }}"
---
Expr#4294967040@25
  ExprKind (Struct)
    StructExpr#4294967040@24
      StructEntry#4294967040@11 (key: sum)
        Expr#4294967040@10
          ExprKind (Call)
            CallExpr#4294967040@10
              Expr#4294967040@5
                ExprKind (Path)
                  Path#4294967040@5 (rooted: false)
                    PathSegment#4294967040@4 (name: add)
              Argument#4294967040@7
                Expr#4294967040@7
                  ExprKind (Literal)
                    LiteralExpr#4294967040@6
                      LiteralKind (Integer)
                        IntegerLiteral#4294967040@6 (1)
              Argument#4294967040@9
                Expr#4294967040@9
                  ExprKind (Literal)
                    LiteralExpr#4294967040@8
                      LiteralKind (Integer)
                        IntegerLiteral#4294967040@8 (2)
      StructEntry#4294967040@23 (key: message)
        Expr#4294967040@22
          ExprKind (Call)
            CallExpr#4294967040@22
              Expr#4294967040@17
                ExprKind (Path)
                  Path#4294967040@17 (rooted: false)
                    PathSegment#4294967040@16 (name: format)
              Argument#4294967040@19
                Expr#4294967040@19
                  ExprKind (Literal)
                    LiteralExpr#4294967040@18
                      LiteralKind (String)
                        StringLiteral#4294967040@18 (Hello, {0}!)
              Argument#4294967040@21
                Expr#4294967040@21
                  ExprKind (Literal)
                    LiteralExpr#4294967040@20
                      LiteralKind (String)
                        StringLiteral#4294967040@20 (World)
